--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 
 <body>
-    <link href="//h5.4j.com/forgame/css/game.css?1544876210" rel="stylesheet">
+    <link href="./forgame/css/game.css?1544876210" rel="stylesheet">
     <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-    <script src="//h5.4j.com/forgame/js/jquery-2.1.1.min.js?1473072359"></script>
-    <script src="//h5.4j.com/forgame/js/com4japi.min.v2.3.12.js?1590726593"></script>
+    <script src="./forgame/js/jquery-2.1.1.min.js?1473072359"></script>
+    <script src="./forgame/js/com4japi.min.v2.3.12.js?1590726593"></script>
     <script src="c2runtime.js"></script>
-    <script src="//h5.4j.com/forgame/js/ga.js?1476096711"></script>
+    <script src="./forgame/js/ga.js?1476096711"></script>
 </body>
 
 </html>
